--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ deploy:
   provider: script
   script: ./demo/scripts/deploy.sh
   on:
-    branch: master
+    branch: travis-deploy
 
 env:
   global:
